<resources>
    <string name="app_name">LearningBliBli</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="favorite">Favorite</string>
    <string name="watchlist">Watchlist</string>
    <string name="go_to_slide_show">Go to slide show</string>
    <string name="back_to_home">back to home</string>
    <string name="poster">poster</string>
    <string name="now_playing">Now Playing</string>
    <string name="detail_movie">Detail Movie</string>
    <string name="overview">Overview</string>
    <string name="loading">Loading…</string>
    <string name="search">Search</string>
    <string name="hint">Hint</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="go_to_register">Go To Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="logout">Logout</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="your_meals">Your Meals</string>
    <string name="recommendation_meals">Recommendation Meals</string>
    <string name="new_meals">New Meals</string>
</resources>