<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.learningblibli.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.example.learningblibli.feature_favorite.ui.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.learningblibli.feature_detail.ui.DetailFragment"
        android:label="@string/detail_movie"
        tools:layout="@layout/fragment_detail" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.learningblibli.feature_search.ui.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.learningblibli.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.learningblibli.ui.register.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register" />
    <fragment
        android:id="@+id/settingFragment"
        android:name="com.example.learningblibli.feature_setting.ui.SettingFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_setting" />

</navigation>