<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment" >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_meals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/your_meals"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/tv_recommendation_meals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/recommendation_meals"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_meal" />
        <TextView
            android:id="@+id/tv_new_meals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/new_meals"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_recommendation_meals" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_meal"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:translationZ="-100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_meals"
            tools:listitem="@layout/item_list_meal" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recommendation_meals"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:translationZ="-100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_recommendation_meals"
            tools:listitem="@layout/item_list_meal" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_new_meals"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:translationZ="-100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_new_meals"
            tools:listitem="@layout/item_list_meal" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>